@@ -66,8 +66,10 @@ class rest_server::microhttpd_request : public rest_request {
   const sockaddr* address() const;
   const char* forwarded_for() const;
 
-  virtual bool respond(const char* content_type, string_piece body) override;
-  virtual bool respond(const char* content_type, response_generator* generator) override;
+  virtual bool respond(const char* content_type, string_piece body,
+                       const std::vector<std::pair<const char*, const char*>>& headers = {}) override;
+  virtual bool respond(const char* content_type, response_generator* generator,
+                       const std::vector<std::pair<const char*, const char*>>& headers = {}) override;
   virtual bool respond_not_found() override;
   virtual bool respond_method_not_allowed(const char* comma_separated_allowed_methods) override;
   virtual bool respond_error(string_piece error, int code = 400) override;
@@ -85,10 +87,13 @@ class rest_server::microhttpd_request : public rest_request {
   bool generator_end;
   unsigned generator_offset;
 
-  static MHD_Response* create_response(string_piece data, const char* content_type);
-  static MHD_Response* create_generator_response(microhttpd_request* request, const char* content_type);
+  static MHD_Response* create_response(string_piece data, const char* content_type,
+                                       const std::vector<std::pair<const char*, const char*>>& headers = {});
+  static MHD_Response* create_generator_response(microhttpd_request* request, const char* content_type,
+                                                 const std::vector<std::pair<const char*, const char*>>& headers = {});
   static MHD_Response* create_plain_permanent_response(const string& data);
-  static void response_common_headers(unique_ptr<MHD_Response, MHD_ResponseDeleter>& response, const char* content_type);
+  static void response_headers(unique_ptr<MHD_Response, MHD_ResponseDeleter>& response, const char* content_type,
+                               const std::vector<std::pair<const char*, const char*>>& headers = {});
 
   static int get_iterator(void* cls, MHD_ValueKind kind, const char* key, const char* value);
   static int post_iterator(void* cls, MHD_ValueKind kind, const char* key, const char* filename, const char* content_type, const char* transfer_encoding, const char* data, uint64_t off, size_t size);
@@ -201,17 +206,19 @@ const char* rest_server::microhttpd_request::forwarded_for() const {
   return MHD_lookup_connection_value(connection, MHD_HEADER_KIND, "X-Forwarded-For");
 }
 
-bool rest_server::microhttpd_request::respond(const char* content_type, string_piece body) {
-  unique_ptr<MHD_Response, MHD_ResponseDeleter> response(create_response(body, content_type));
+bool rest_server::microhttpd_request::respond(const char* content_type, string_piece body,
+                                              const std::vector<std::pair<const char*, const char*>>& headers) {
+  unique_ptr<MHD_Response, MHD_ResponseDeleter> response(create_response(body, content_type, headers));
   if (!response) return false;
   return MHD_queue_response(connection, MHD_HTTP_OK, response.get()) == MHD_YES;
 }
 
-bool rest_server::microhttpd_request::respond(const char* content_type, response_generator* generator) {
+bool rest_server::microhttpd_request::respond(const char* content_type, response_generator* generator,
+                                              const std::vector<std::pair<const char*, const char*>>& headers) {
   this->generator.reset(generator);
   this->generator_end = false;
   this->generator_offset = 0;
-  unique_ptr<MHD_Response, MHD_ResponseDeleter> response(create_generator_response(this, content_type));
+  unique_ptr<MHD_Response, MHD_ResponseDeleter> response(create_generator_response(this, content_type, headers));
   if (!response) return false;
   return MHD_queue_response(connection, MHD_HTTP_OK, response.get()) == MHD_YES;
 }
@@ -235,28 +242,38 @@ bool rest_server::microhttpd_request::respond_error(string_piece error, int code
 
 MHD_Response* rest_server::microhttpd_request::create_plain_permanent_response(const string& data) {
   unique_ptr<MHD_Response, MHD_ResponseDeleter> response(MHD_create_response_from_buffer(data.size(), (void*) data.c_str(), MHD_RESPMEM_PERSISTENT));
-  response_common_headers(response, "text/plain");
+  response_headers(response, "text/plain");
   return response.release();
 }
 
-MHD_Response* rest_server::microhttpd_request::create_response(string_piece data, const char* content_type) {
+MHD_Response* rest_server::microhttpd_request::create_response(string_piece data, const char* content_type,
+                                                               const std::vector<std::pair<const char*, const char*>>& headers) {
   unique_ptr<MHD_Response, MHD_ResponseDeleter> response(MHD_create_response_from_buffer(data.len, (void*) data.str, MHD_RESPMEM_MUST_COPY));
-  response_common_headers(response, content_type);
+  response_headers(response, content_type, headers);
   return response.release();
 }
 
-MHD_Response* rest_server::microhttpd_request::create_generator_response(microhttpd_request* request, const char* content_type) {
+MHD_Response* rest_server::microhttpd_request::create_generator_response(microhttpd_request* request, const char* content_type,
+                                                                         const std::vector<std::pair<const char*, const char*>>& headers) {
   unique_ptr<MHD_Response, MHD_ResponseDeleter> response(MHD_create_response_from_callback(-1, 32 << 10, generator_callback, request, nullptr));
-  response_common_headers(response, content_type);
+  response_headers(response, content_type, headers);
   return response.release();
 }
 
-void rest_server::microhttpd_request::response_common_headers(unique_ptr<MHD_Response, MHD_ResponseDeleter>& response, const char* content_type) {
+void rest_server::microhttpd_request::response_headers(unique_ptr<MHD_Response, MHD_ResponseDeleter>& response, const char* content_type,
+                                                       const std::vector<std::pair<const char*, const char*>>& headers) {
   if (!response) return;
   if (MHD_add_response_header(response.get(), MHD_HTTP_HEADER_CONTENT_TYPE, content_type) != MHD_YES ||
       MHD_add_response_header(response.get(), MHD_HTTP_HEADER_ACCESS_CONTROL_ALLOW_ORIGIN, "*") != MHD_YES ||
-      MHD_add_response_header(response.get(), MHD_HTTP_HEADER_CONNECTION, "close") != MHD_YES)
+      MHD_add_response_header(response.get(), MHD_HTTP_HEADER_CONNECTION, "close") != MHD_YES) {
     response.reset();
+    return;
+  }
+  for (auto&& header : headers)
+    if (response && MHD_add_response_header(response.get(), header.first, header.second) != MHD_YES) {
+      response.reset();
+      return;
+    }
 }
 
 
